# ngango

./: README.md  notes.md  pyproject.toml
dummyproject/board/: requirements.txt
dummyproject/board/board/: asgi.py  settings.py  urls.py  wsgi.py
dummyproject/board/members/: models.py  serializers.py  urls.py  views.py
dummyproject/board/members/migrations/: 0001_initial.py  0002_member_other_field_member_random_field.py
dummyproject/board/posts/: admin.py  models.py  serializers.py  views.py
dummyproject/board/posts/migrations/: 0001_initial.py  0002_post.py
dummyproject/ng-board/: README.md  angular.json  package-lock.json  package.json
dummyproject/ng-board/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
dummyproject/ng-board/src/app/models/: posts.struct.ts
dummyproject/ng-board/src/app/services/: members.service.ts  posts.service.ts
ngango/: __main__.py  ast_log.ast  config.json  config.py  core.py  file_service.py  scratch  test_dump_docstring.json
ngango/tsgen/: generator.py  mappings.py  translator.py  typescript.py
tsgen-output/: members.service.ts  members.struct.ts  posts.service.ts  posts.struct.ts  user.service.ts
